--- a/basic-fantasy-rpg/conf/application.conf
+++ b/basic-fantasy-rpg/conf/application.conf
@@ -1,1 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
+
+play.modules.enabled += "play.modules.reactivemongo.ReactiveMongoModule"
+
+mongodb.uri = "mongodb://localhost:27017/BasicFantasy"
+mongodb.uri = ${MONGO_URI}
